# alacritty-perf

./: .gitignore  Cargo.toml  bench.sh  headless-bench.sh  nginx.conf  start-server.sh
src/: bench.rs  main.rs
static/css/: index.css
static/html/: index.html
static/js/: perf-charts.js
