[package]
name = "alacritty-perf"
version = "0.1.0"
authors = ["Christian Duerr <contact@christianduerr.com>"]

[dependencies]
clippy = { version = "*", optional = true }
serde_derive = "1.0.59"
serde_json = "1.0.17"
env_logger = "0.5.10"
actix-web = "0.6.9"
openssl = "0.10.8"
walkdir = "2.1.4"
futures = "0.1.0"
base64 = "0.9.1"
serde = "1.0.59"
chrono = "0.4.2"
log = "0.4.1"
